# cnrhlc

./: LICENSE  README.md  pyproject.toml
cnrhlc/: auditory.py  bsrnn.py  filters.py  losses.py  utils.py
tests/: conftest.py  test_bsrnn.py  test_filters.py  test_losses.py
